Update documentation to describe macOS packaging process.